# wordle-perfect

./: .gitignore  BENCHMARKS.md  CLAUDE.md  CMakeLists.txt  README.md  flake.nix  spec.md
.cache/clangd/index/: build_db.cpp.BC15E4FF72111789.idx  database.cpp.56061CCADFADB767.idx  database.hpp.5AD1CF9CD98AB7D9.idx  main.cpp.D565FE650A14DD0F.idx  pattern.cpp.A2FFD2A3E3D60CD8.idx  pattern.hpp.29CA0806F12D0A45.idx  solver.cpp.2198F230D33F5393.idx  solver.hpp.6815B4052E8D9C52.idx  wordlist.cpp.97FC7A507BCFAEFC.idx  wordlist.hpp.0FCC95930ACB0AF6.idx
data/: SOURCES.md  answers.txt
scripts/: beam_sweep.sh  memo_sweep.sh
src/: binarydb.cpp  binarydb.hpp  database.cpp  database.hpp  gpu_score.hpp  gpu_score.mm  main.cpp  pattern.cpp  pattern.hpp  progress.hpp  solver.cpp  solver.hpp  wordlist.cpp  wordlist.hpp
tests/: test_binarydb.cpp  test_database.cpp  test_pattern.cpp  test_solver.cpp  test_wordlist.cpp
tools/: build_db.cpp  exact.cpp  exact_mean.cpp  gpu_bench.cpp  optimal.cpp
